cluster-config/istio-ingress-gateway-azure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "excalidraw.infologistix-cnc.ddnss.org"
    - "wekan.infologistix-cnc.ddnss.org"
    - "confluent.infologistix-cnc.ddnss.org"
    - "rancher.infologistix-cnc.ddnss.org"
    - "druid.infologistix-cnc.ddnss.org"
    - "superset.infologistix-cnc.ddnss.org"
    - "elastic.infologistix-cnc.ddnss.org"
    - "hadoop.infologistix-cnc.ddnss.org"
    - "zeppelin.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-excalidraw
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-excalidraw # must be the same as secret
    hosts:
    - "excalidraw.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-wekan
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-wekan # must be the same as secret
    hosts:
    - "wekan.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-confluent
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-confluent # must be the same as secret
    hosts:
    - "confluent.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-rancher
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-rancher # must be the same as secret
    hosts:
    - "rancher.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-druid
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-druid # must be the same as secret
    hosts:
    - "druid.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-superset
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-superset # must be the same as secret
    hosts:
    - "superset.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-elastic
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-elastic # must be the same as secret
    hosts:
    - "elastic.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-hadoop
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-hadoop # must be the same as secret
    hosts:
    - "hadoop.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-zeppelin
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-zeppelin # must be the same as secret
    hosts:
    - "zeppelin.infologistix-cnc.ddnss.org"
