cluster-config/istio-addons-gateway-azure.yaml
## Central istio-gateway for istio-addons running in azure cloud environment

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-addon-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "grafana.infologistix-cnc.ddnss.org"
    - "kiali.infologistix-cnc.ddnss.org"
    - "prometheus.infologistix-cnc.ddnss.org"
    - "jaeger.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-grafana
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-grafana # must be the same as secret
    hosts:
    - "grafana.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-kiali # must be the same as secret
    hosts:
    - "kiali.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-prometheus
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-prometheus # must be the same as secret
    hosts:
    - "prometheus.infologistix-cnc.ddnss.org"
  - port:
      number: 443
      name: https-jaeger
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret-jaeger # must be the same as secret
    hosts:
    - "jaeger.infologistix-cnc.ddnss.org"
---
######################################################### Grafana #############################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.infologistix-cnc.ddnss.org"
  gateways:
  - istio-ingress-addon-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
---
######################################################### Kiali #############################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.infologistix-cnc.ddnss.org"
  gateways:
  - istio-ingress-addon-gateway
  http:
  - match:
    - uri:
        prefix: /
    #rewrite:
    #  uri: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
---
######################################################### prometheus #############################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - "prometheus.infologistix-cnc.ddnss.org"
  gateways:
  - istio-ingress-addon-gateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
spec:
  host: prometheus
  trafficPolicy:
    tls:
      mode: DISABLE
---
######################################################### jaeger #############################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
  - "jaeger.infologistix-cnc.ddnss.org"
  gateways:
  - istio-ingress-addon-gateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger
  namespace: istio-system
spec:
  host: jaeger
  trafficPolicy:
    tls:
      mode: DISABLE
---
